force-app/main/default/objects/EngagementPhase__c/EngagementPhase__c.object-meta.xml
<CustomObject>
    <description>A phase within an engagement. Master-detail child of Engagement; parent of milestones.</description>
    <label>Engagement Phase</label>
    <nameField>
        <label>Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Phases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>