force-app/main/default/objects/EngagementPhase__c/fields/Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hours__c</fullName>
    <description>Planned effort in hours for this phase.</description>
    <label>Planned Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>