force-app/main/default/objects/EngagementPhase__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Phase start date.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>